--- a/views/admin/users/createModify.ejs
+++ b/views/admin/users/createModify.ejs
@@ -30,7 +30,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="email">Email <%- include('../partials/form/requiredSymbols') %></label>
-                                    <input type="text" name="email" id="email" class="form-control" required value="<%= userToUpdate.email %>">
+                                    <input type="email" name="email" id="email" class="form-control" required value="<%= userToUpdate.email %>">
                                 </div>
                             </div>
 
