added some style to login & register pages

--- a/views/public/partials/header.ejs
+++ b/views/public/partials/header.ejs
@@ -63,7 +63,9 @@
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand topbar mb-4 static-top shadow">
 
-                    :heart | I'm with you
+                    <a href="/" class="d-flex justify-content-center align-items-center">
+                        <i class="far fa-heart text-primary"></i>&nbsp;<span class="d-none d-sm-block">| Home</span>
+                    </a>
 
 
                     <!-- Topbar Navbar -->
