--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,33 +1,115 @@
-<h1>Register</h1>
-<form action="/register" method="POST">
-    <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-    </div>
-    <div>
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required>
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <div>
-        <label for="name">Nome</label>
-        <input type="text" id="name" name="name">
-    </div>
-    <div>
-        <label for="surname">Cognome</label>
-        <input type="text" id="surname" name="surname">
-    </div>
-    <!-- <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name">
-    </div>
-    <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name">
-    </div> -->
-    <button type="submit">Register</button>
-</form>
-<a href="/login">Login</a>
+<%- include('./public/partials/header') %>
+
+    <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
+
+        <div class="row text-center">
+            <div class="col-md-12">
+                <h1>Crea un account</h1>
+                <p class="font-italic">Creare un account è vantaggioso in quanto permette di salvarti i post che ti piacciono in una tua personale raccolta!</p>
+            </div>
+        </div>
+
+        <div class="col-md-7 col-lg-6">
+            <form action="/register" method="POST">
+
+
+                <!-- metto un benvenuto con NODEMAILER -->
+                <div class="row">
+                    <div class="input-group col-lg-12 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4">
+                                    <i class="fa fa-envelope"></i>
+                                </span>
+                        </div>
+                        <input id="email" type="email" name="email" placeholder="abc@example.com" class="form-control" required>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-group col-lg-12 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4">
+                                <i class="fa fa-user"></i>
+                            </span>
+                        </div>
+                        <input type="text" id="username" name="username" placeholder="username" class="form-control" required>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-group col-lg-6 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4">
+                                <i class="fas fa-signature"></i>
+                            </span>
+                        </div>
+                        <input type="text" id="name" name="name" placeholder="Nome" class="form-control">
+                    </div>
+
+                    <div class="input-group col-lg-6 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4">
+                                <i class="fas fa-signature"></i>
+                            </span>
+                        </div>
+                        <input type="text" id="surname" name="surname" placeholder="Cognome" class="form-control">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-group col-lg-6 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4">
+                                <i class="fas fa-key"></i>
+                            </span>
+                        </div>
+                        <input type="password" id="password" name="password" placeholder="Password" class="form-control" required>
+                    </div>
+
+                    <div class="input-group col-lg-6 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4">
+                                <i class="fas fa-key"></i>
+                            </span>
+                        </div>
+                        <input type="password" id="passwordConfirmation" class="form-control" placeholder="Conferma password" required>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-lg-12 mx-auto mb-0">
+                        <button type="submit" class="btn btn-block py-2 btn-outline-primary">Register</button>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
+                        <div class="border-bottom w-100 ml-5"></div>
+                        <span class="px-2 small font-weight-bold">OR</span>
+                        <div class="border-bottom w-100 mr-5"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-lg-12 mx-auto">
+                        <a href="#google" class="btn btn-primary btn-block py-2 btn-google">
+                            <i class="fab fa-google mr-2"></i>
+                            <span class="font-weight-bold">Accedi con Google</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="text-center w-100">
+                    <p class="font-weight-bold">Hai già un account? <a href="/login" class="ml-1 text-info">Login</a></p>
+                </div>
+
+
+
+
+
+
+            </form>
+        </div>
+
+
+        <%- include('./public/partials/footer') %>
