--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -10,7 +10,7 @@
 
 
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold">Modifica PERSONA</h6>
+                    <h6 class="m-0 font-weight-bold">Aggiorna profilo</h6>
                 </div>
 
                 <div class="card-body">
@@ -30,10 +30,11 @@
                                     <input type="text" name="username" class="form-control" value="<%= user.username %>" required>
                                 </div>
                             </div>
-                            <div class=" col-md-4 ">
-                                <div class="form-group ">
+                            <div class=" col-md-4">
+                                <div class="form-group">
+                                    <!-- maybe direttamente hidden -->
                                     <label for="password">Password <%- include('./partials/form/requiredSymbols') %></label>
-                                    <input type="password" name="password" id="password" class="form-control" required disabled>
+                                    <input type="password" name="currentPassword" id="currentPassword" class="form-control" required disabled>
                                 </div>
                             </div>
                         </div>
@@ -137,13 +138,48 @@
 
                 </div>
 
-                <div class="card-footer ">
+                <div class="card-footer">
                     <div class="col-12 d-flex justify-content-between align-items-center">
-                        <div id="input-group ">
-                            <button type="submit " class="btn btn-primary mb-2 "><i class="fas fa-check "></i> | Conferma modifica</button>
+                        <div id="input-group">
+                            <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-check"></i> | Conferma modifica</button>
                             <a href="/admin">
-                                <button type="button " class="btn btn-dark mb-2 "><i class="fas fa-history "></i> | Annulla</button>
+                                <button type="button" class="btn btn-dark mb-2"><i class="fas fa-history"></i> | Annulla</button>
                             </a>
+                        </div>
+                        <div class="">
+                            <button type="button" class="btn btn-secondary">:changeIcon | Cambia password</button>
+
+                            <div class=" col-md-4">
+                                <div class="form-group ">
+                                    <label for="oldPassword">Vecchia password <%- include('./partials/form/requiredSymbols') %></label>
+                                    <input type="password" name="oldPassword" id="oldPassword" class="form-control">
+                                </div>
+                            </div>
+
+
+                            <div class="row">
+                                <div class="input-group col-lg-6 mb-4">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-white px-4">
+                                            <i class="fas fa-key"></i>
+                                        </span>
+                                    </div>
+                                    <input type="password" id="password" name="password" placeholder="Password" class="form-control" required>
+                                </div>
+
+                                <div class="input-group col-lg-6 mb-4">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-white px-4">
+                                            <i class="fas fa-key"></i>
+                                        </span>
+                                    </div>
+                                    <input type="password" id="passwordConfirmation" class="form-control" placeholder="Conferma password" required>
+                                </div>
+                            </div>
+
+
+                            <p>modal per cambio password</p>
+                            <!-- modal -->
                         </div>
                         </form>
                     </div>
@@ -157,6 +193,7 @@
     </div>
 
 
+    <script src="/js/password.js"></script>
     <script src="/js/admin/crudPeople.js"></script>
 
 
