--- a/views/register.ejs
+++ b/views/register.ejs
@@ -78,7 +78,7 @@
 
                 <div class="row">
                     <div class="form-group col-lg-12 mx-auto mb-0">
-                        <button type="submit" class="btn btn-block py-2 btn-outline-primary">Register</button>
+                        <button type="submit" class="btn btn-block py-2 btn-outline-primary" onclick="checkPassword()">Register</button>
                     </div>
                 </div>
 
@@ -110,6 +110,9 @@
 
             </form>
         </div>
+
+
+        <script src="/js/password.js"></script>
 
 
         <%- include('./public/partials/footer') %>
