--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -20,7 +20,7 @@
         <div class="row ">
 
             <!-- Numero frasi (card) -->
-            <div class="col-xl-4 col-md-12 mb-4 ">
+            <div class="col-xl-6 col-md-12 mb-4 ">
                 <div class="card border-left-primary shadow h-100 py-2 ">
                     <div class="card-body ">
                         <div class="row no-gutters align-items-center ">
@@ -45,7 +45,7 @@
 
 
             <!-- numero utenti admin -->
-            <div class="col-xl-4 col-md-12 mb-4 ">
+            <div class="col-xl-6 col-md-12 mb-4 ">
                 <div class="card border-left-success shadow h-100 py-2 ">
                     <div class="card-body ">
                         <div class="row no-gutters align-items-center ">
@@ -115,7 +115,7 @@
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800 ">
                                     <a href="/admin/users" class="text-dark">
-                                        <%= number_users %>
+                                        <%= number_basics %>
                                     </a>
                                 </div>
                             </div>
