--- a/views/admin/phrases/all.ejs
+++ b/views/admin/phrases/all.ejs
@@ -60,7 +60,7 @@
                                     <% phrases.forEach(phrase => { %>
                                         <tr>
                                             <td style="width: 25%;">
-                                                <a href="/admin/users/<%= phrase.authorId %>" class="text-info">
+                                                <a class="text-info">
                                                     <%= phrase.username %>
                                                 </a>
                                             </td>
